fabric/testdata/out/ing_sugarcane-get-api-commodity-groups-rl-users-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"https://identity.zalando.com/managed-id\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e clusterClientRatelimit(\"sugarcane_api-commodity-groups_GET_users\",
      120, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/commodity-groups\") \u0026\u0026 Method(\"GET\") \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\",
      \"sopletaev\", \"https://identity.zalando.com/managed-id\", \"fpobbig\", \"https://identity.zalando.com/managed-id\",
      \"rschmulian\", \"https://identity.zalando.com/managed-id\", \"ivarouchakis\",
      \"https://identity.zalando.com/managed-id\", \"egalligan\", \"https://identity.zalando.com/managed-id\",
      \"wtuff\", \"https://identity.zalando.com/managed-id\", \"arastogi\", \"https://identity.zalando.com/managed-id\",
      \"rlagarferrei\", \"https://identity.zalando.com/managed-id\", \"igardas\",
      \"https://identity.zalando.com/managed-id\", \"ssinghi\", \"https://identity.zalando.com/managed-id\",
      \"apostolache\", \"https://identity.zalando.com/managed-id\", \"dstroynov\",
      \"https://identity.zalando.com/managed-id\", \"dalee\", \"https://identity.zalando.com/managed-id\",
      \"jwawszczak\", \"https://identity.zalando.com/managed-id\", \"padorosz\", \"https://identity.zalando.com/managed-id\",
      \"zulabideen\", \"https://identity.zalando.com/managed-id\", \"akraskov\", \"https://identity.zalando.com/managed-id\",
      \"dabbassi\", \"https://identity.zalando.com/managed-id\", \"ydyakov\", \"https://identity.zalando.com/managed-id\",
      \"pabazsolt\", \"https://identity.zalando.com/managed-id\", \"mneverov\", \"https://identity.zalando.com/managed-id\",
      \"dmiaroslavsk\", \"https://identity.zalando.com/managed-id\", \"nkrapyvchenk\",
      \"https://identity.zalando.com/managed-id\", \"jmcneela\", \"https://identity.zalando.com/managed-id\",
      \"cyeh\", \"https://identity.zalando.com/managed-id\", \"aflanagan\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"034b420d-673b-11e9-8daa-02b5f12a6be8","deployment-id":"d-ccbr8yx3m7q8jqmamix8fuc5m","pipeline-id":"l-6yn1sv8ryxtz4pzezhuwwcjc8"},"name":"sugarcane-get-api-commodity-groups-rl-users-all","namespace":"default"},"spec":{"rules":[{"host":"sugarcane.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"sugarcane","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-commodity- [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> clusterClientRatelimit("sugarcane_api-commodity-groups_GET_users",
      120, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/commodity-groups") && Method("GET")
      && JWTPayloadAnyKV("https://identity.zalando.com/managed-id", "sopletaev", "https://identity.zalando.com/managed-id",
      "fpobbig", "https://identity.zalando.com/managed-id", "rschmulian", "https://identity.zalando.com/managed-id",
      "ivarouchakis", "https://identity.zalando.com/managed-id", "egalligan", "https://identity.zalando.com/managed-id",
      "wtuff", "https://identity.zalando.com/managed-id", "arastogi", "https://identity.zalando.com/managed-id",
      "rlagarferrei", "https://identity.zalando.com/managed-id", "igardas", "https://identity.zalando.com/managed-id",
      "ssinghi", "https://identity.zalando.com/managed-id", "apostolache", "https://identity.zalando.com/managed-id",
      "dstroynov", "https://identity.zalando.com/managed-id", "dalee", "https://identity.zalando.com/managed-id",
      "jwawszczak", "https://identity.zalando.com/managed-id", "padorosz", "https://identity.zalando.com/managed-id",
      "zulabideen", "https://identity.zalando.com/managed-id", "akraskov", "https://identity.zalando.com/managed-id",
      "dabbassi", "https://identity.zalando.com/managed-id", "ydyakov", "https://identity.zalando.com/managed-id",
      "pabazsolt", "https://identity.zalando.com/managed-id", "mneverov", "https://identity.zalando.com/managed-id",
      "dmiaroslavsk", "https://identity.zalando.com/managed-id", "nkrapyvchenk", "https://identity.zalando.com/managed-id",
      "jmcneela", "https://identity.zalando.com/managed-id", "cyeh", "https://identity.zalando.com/managed-id",
      "aflanagan") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2020-04-09T09:01:10Z"
  generation: 1
  labels:
    controller-uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
    deployment-id: d-ccbr8yx3m7q8jqmamix8fuc5m
    pipeline-id: l-6yn1sv8ryxtz4pzezhuwwcjc8
  name: sugarcane-get-api-commodity-groups-rl-users-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: sugarcane
    uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
  resourceVersion: "1370351713"
  uid: 7b7687c2-97ca-4ff9-806e-37291fbd26eb
spec:
  rules:
  - host: sugarcane.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-commodity-group-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
